# serializer version: 1
# name: test_device[BAT002]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'zinvolt',
        'BAT002',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Zinvolt',
    'model': None,
    'model_id': 'ZVS4000',
    'name': 'Battery - 2',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': 'BAT002',
    'sw_version': 'V1.20',
    'via_device_id': <ANY>,
  })
# ---
# name: test_device[ZVG011025120088]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'zinvolt',
        'ZVG011025120088',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Zinvolt',
    'model': None,
    'model_id': 'ZVS4000',
    'name': 'Zinvolt Batterij',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': 'ZVG011025120088',
    'sw_version': 'V1.20',
    'via_device_id': None,
  })
# ---
